--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <title>UserCard</title>
 </head>
 <body>
+    <div class="userCard">
+        <div class="userImageContainer">
+            <img src="http://multik-online.net/assets/content/2011/01/tom-i-dzherri.jpg" alt="user photo">
+        </div>
+        <div class="userInfoContainer">
+            <div class="userFullName">Tom and Jerry</div>
+            <div class="userLink">@tomandjerry</div>
+            <div class="userInfo">Tom and Jerry is an American cartoon series about a hapless cat's never-ending pursuit of a clever mouse. Tom is the
+            scheming cat, and Jerry is the spunky mouse. The series was driven entirely by action and visual humour; the characters
+            almost never spoke.</div>
+            <div class="userStatContainer">
+                <div class="userStatItem">
+                    <div class="statName">posts</div>
+                    <div class="statValue">2000</div>
+                </div>
+                <div class="userStatItem">
+                    <div class="statName">followers</div>
+                    <div class="statValue">10b</div>
+                </div>
+                <div class="userStatItem">
+                    <div class="statName">following</div>
+                    <div class="statValue">10b</div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
