card styles and web links for user were added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                     <div class="statValue">10b</div>
                 </div>
             </div>
+            <div class="userWebLinks">
+                <img class="inst" src="./icons/instagram.png" alt="insta" />
+                <img class="fb" src="./icons/facebook.png" alt="fb" />
+                <img class="tel" src="./icons/telegram.png" alt="teleg" />
+            </div>
         </div>
     </div>
     
